TG-2 Gap between blocks in About Jinya section
Fixed gap and several other design issues

--- a/src/imprint.html
+++ b/src/imprint.html
@@ -11,7 +11,16 @@
   <meta name="msapplication-TileColor" content="#504a56">
   <meta name="theme-color" content="#504a56">
   <title>Jinya Gallery CMS</title>
-  <link rel="stylesheet" href='styles/jinya.css'>
+  <link rel='stylesheet' href='styles/body.css'>
+  <link rel='stylesheet' href='styles/section.css'>
+  <link rel='stylesheet' href='styles/footer.css'>
+  <link rel='stylesheet' href='styles/get.css'>
+  <link rel='stylesheet' href='styles/header.css'>
+  <link rel='stylesheet' href='styles/home.css'>
+  <link rel='stylesheet' href='styles/about.css'>
+  <link rel='stylesheet' href='styles/imprint.css'>
+  <link rel='stylesheet' href='styles/sites.css'>
+  <link rel="stylesheet" type="text/css" href="https://fonts.jinya.de/css2?family=Lato:ital,wght@0,400;1,400;0,700;1,700">
 </head>
 <body>
 <div class="jinya-container">
@@ -54,9 +63,9 @@
   </div>
   <footer class="jinya-footer">
     <span class="jinya-footer__claim">Made with <span class="jinya-footer__heart">♥</span> in Hildesheim by
-      <a class="jinya-footer__link" href="https://imanuel.ulbricht.codes">Imanuel Ulbricht</a>
+      <a class="jinya-footer__link" href="https://imanuel.dev">Imanuel Ulbricht</a>
     </span>
-    <a class="jinya-footer__link jinya-footer__link--imprint" href="/imprint">Imprint</a>
+    <a class="jinya-footer__link jinya-footer__link--imprint" href="imprint.html">Imprint</a>
   </footer>
 </div>
 </body>
