--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,17 @@
   <meta name='msapplication-TileColor' content='#504a56'>
   <meta name='theme-color' content='#504a56'>
   <title>Jinya Gallery CMS</title>
-  <link rel='stylesheet' href='styles/jinya.css'>
+  <link rel='stylesheet' href='styles/body.css'>
+  <link rel='stylesheet' href='styles/section.css'>
+  <link rel='stylesheet' href='styles/footer.css'>
+  <link rel='stylesheet' href='styles/get.css'>
+  <link rel='stylesheet' href='styles/header.css'>
+  <link rel='stylesheet' href='styles/home.css'>
+  <link rel='stylesheet' href='styles/about.css'>
+  <link rel='stylesheet' href='styles/imprint.css'>
+  <link rel='stylesheet' href='styles/sites.css'>
+  <link rel='stylesheet' type='text/css'
+        href='https://fonts.jinya.de/css2?family=Lato:ital,wght@0,400;1,400;0,700;1,700'>
 </head>
 <body>
 <div class='jinya-container'>
@@ -66,7 +76,7 @@
           <div class='jinya-sites__list-item jinya-sites__list-item--left'>
             <img class='jinya-sites__image jinya-sites__image--left' src='assets/jenny-jinya.com.png' alt=''>
             <div class='jinya-sites__content jinya-sites__content--right'>
-              <h3 class='jinya-sites__site-header'>jenny-jinya.com</h3>
+              <h3 class='jinya-sites__site-header'>Jenny Jinya</h3>
               <p class='jinya-sites__site-content'>
                 Jenny Jinya is a freelance illustrator based in Germany, she studies Digital Media and had a number of
                 exhibitions since she is 16, her new portfolio got an incredible amount of positive feedback.
@@ -76,10 +86,10 @@
           </div>
           <div class='jinya-sites__list-item jinya-sites__list-item--right'>
             <div class='jinya-sites__content jinya-sites__content--left'>
-              <h3 class='jinya-sites__site-header'>lovingreaper.com</h3>
+              <h3 class='jinya-sites__site-header'>Jenny Jinya Comics</h3>
               <p class='jinya-sites__site-content'>
-                lovingreaper.com is the website of the artist Jenny-Jinya. She is the creator of the famous Loving
-                Reaper comic series. She trusts <i>Jinya</i> to give people the perfect view on her comics.
+                Jenny Jinya comics is the comic website of the artist Jenny-Jinya. She is the creator of the famous
+                Loving Reaper comic series. She trusts <i>Jinya</i> to give people the perfect view on her comics.
               </p>
               <a class='jinya-sites__site-link' href='https://lovingreaper.com'>Go to lovingreaper.com</a>
             </div>
@@ -88,7 +98,7 @@
           <div class='jinya-sites__list-item jinya-sites__list-item--left'>
             <img class='jinya-sites__image jinya-sites__image--left' src='assets/imanuel.ulbricht.design.png' alt=''>
             <div class='jinya-sites__content jinya-sites__content--right'>
-              <h3 class='jinya-sites__site-header'>imanuel.ulbricht.design</h3>
+              <h3 class='jinya-sites__site-header'>Imanuel Ulbricht Design</h3>
               <p class='jinya-sites__site-content'>
                 Imanuel Ulbricht is a professional web developer, web designer and app designer. The portfolio was
                 created with the default theme of <i>Jinya</i> and is the perfect showcase.
@@ -98,7 +108,7 @@
           </div>
           <div class='jinya-sites__list-item jinya-sites__list-item--right'>
             <div class='jinya-sites__content jinya-sites__content--left'>
-              <h3 class='jinya-sites__site-header'>creastina.art</h3>
+              <h3 class='jinya-sites__site-header'>Creastina</h3>
               <p class='jinya-sites__site-content'>
                 Creastina is the private crafting blog of Christina. Together with Christina we developed a blog
                 platform that perfectly integrates into <i>Jinya</i>.
@@ -130,7 +140,7 @@
   <footer class='jinya-footer'>
     <span class='jinya-footer__claim'>
       Made with <span class='jinya-footer__heart'>♥</span> in Hildesheim by
-      <a class='jinya-footer__link' href='https://imanuel.ulbricht.codes'>Imanuel Ulbricht</a>
+      <a class='jinya-footer__link' href='https://imanuel.dev'>Imanuel Ulbricht</a>
     </span>
     <a class='jinya-footer__link jinya-footer__link--imprint' href='imprint.html'>Imprint</a>
   </footer>
