Use encoded font url

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
   <link rel='stylesheet' href='%sveltekit.assets%/css/reset.css'>
   <link rel='stylesheet' href='%sveltekit.assets%/css/variables.css'>
   <link rel='stylesheet' type='text/css'
-        href='https://fonts.jinya.de/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900'>
+        href='https://fonts.jinya.de/css2?family=Lato:ital,wght@0,100%3B0,300%3B0,400%3B0,700%3B0,900'>
   <link href='%sveltekit.assets%/apple-touch-icon.png' rel='apple-touch-icon' sizes='180x180'>
   <link href='%sveltekit.assets%/favicon-512x512.png' rel='icon' sizes='512x512' type='image/png'>
   <link href='%sveltekit.assets%/favicon-192x192.png' rel='icon' sizes='192x192' type='image/png'>
