Fix code style isseus

--- a/src/app.html
+++ b/src/app.html
@@ -1,23 +1,36 @@
-<!DOCTYPE html>
-<html lang='en'>
-<head>
-  <meta charset='utf-8' />
-  <meta name='viewport' content='width=device-width' />
-  <link rel='stylesheet' href='%sveltekit.assets%/css/reset.css'>
-  <link rel='stylesheet' href='%sveltekit.assets%/css/variables.css'>
-  <link rel='stylesheet' type='text/css'
-        href='https://fonts.jinya.de/css2?family=Lato:ital,wght@0,100%3B0,300%3B0,400%3B0,700%3B0,900'>
-  <link href='%sveltekit.assets%/apple-touch-icon.png' rel='apple-touch-icon' sizes='180x180'>
-  <link href='%sveltekit.assets%/favicon-512x512.png' rel='icon' sizes='512x512' type='image/png'>
-  <link href='%sveltekit.assets%/favicon-192x192.png' rel='icon' sizes='192x192' type='image/png'>
-  <link href='%sveltekit.assets%/favicon-32x32.png' rel='icon' sizes='32x32' type='image/png'>
-  <link href='%sveltekit.assets%/favicon-16x16.png' rel='icon' sizes='16x16' type='image/png'>
-  <link href='%sveltekit.assets%/favicon.ico' rel='shortcut icon'>
-  <meta content='#514b57' name='msapplication-TileColor'>
-  <meta content='#514b57' name='theme-color'>
-  %sveltekit.head%
-</head>
-<body data-sveltekit-preload-data='hover'>
-<div style='display: contents'>%sveltekit.body%</div>
-</body>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="stylesheet" href="%sveltekit.assets%/css/reset.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/css/variables.css" />
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="https://fonts.jinya.de/css2?family=Lato:ital,wght@0,100%3B0,300%3B0,400%3B0,700%3B0,900"
+		/>
+		<link href="%sveltekit.assets%/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
+		<link
+			href="%sveltekit.assets%/favicon-512x512.png"
+			rel="icon"
+			sizes="512x512"
+			type="image/png"
+		/>
+		<link
+			href="%sveltekit.assets%/favicon-192x192.png"
+			rel="icon"
+			sizes="192x192"
+			type="image/png"
+		/>
+		<link href="%sveltekit.assets%/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png" />
+		<link href="%sveltekit.assets%/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png" />
+		<link href="%sveltekit.assets%/favicon.ico" rel="shortcut icon" />
+		<meta content="#514b57" name="msapplication-TileColor" />
+		<meta content="#514b57" name="theme-color" />
+		%sveltekit.head%
+	</head>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
