--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="stylesheet" href="%sveltekit.assets%/css/reset.css" />
-		<link rel="stylesheet" href="%sveltekit.assets%/css/variables.css" />
+		<meta content="width=device-width" name="viewport" />
+		<link href="%sveltekit.assets%/css/reset.css" rel="stylesheet" />
+		<link href="%sveltekit.assets%/css/variables.css" rel="stylesheet" />
 		<link
+			href="https://fonts.jinya.de/css2?family=Lato:ital,wght@0,100%3B0,300%3B0,400%3B0,700%3B0,900"
 			rel="stylesheet"
 			type="text/css"
-			href="https://fonts.jinya.de/css2?family=Lato:ital,wght@0,100%3B0,300%3B0,400%3B0,700%3B0,900"
 		/>
 		<link href="%sveltekit.assets%/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
 		<link
