--- a/src/app.html
+++ b/src/app.html
@@ -10,24 +10,15 @@
 			rel="stylesheet"
 			type="text/css"
 		/>
-		<link href="%sveltekit.assets%/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
-		<link
-			href="%sveltekit.assets%/favicon-512x512.png"
-			rel="icon"
-			sizes="512x512"
-			type="image/png"
-		/>
-		<link
-			href="%sveltekit.assets%/favicon-192x192.png"
-			rel="icon"
-			sizes="192x192"
-			type="image/png"
-		/>
-		<link href="%sveltekit.assets%/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png" />
-		<link href="%sveltekit.assets%/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png" />
-		<link href="%sveltekit.assets%/favicon.ico" rel="shortcut icon" />
-		<meta content="#514b57" name="msapplication-TileColor" />
-		<meta content="#514b57" name="theme-color" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+		<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#19324c" />
+		<meta name="apple-mobile-web-app-title" content="Jinya CMS" />
+		<meta name="application-name" content="Jinya CMS" />
+		<meta name="msapplication-TileColor" content="#19324c" />
+		<meta name="theme-color" content="#19324c" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
