Update branding images and icons

--- a/src/app.html
+++ b/src/app.html
@@ -4,21 +4,32 @@
 		<meta charset="utf-8" />
 		<meta content="width=device-width" name="viewport" />
 		<link href="%sveltekit.assets%/css/reset.css" rel="stylesheet" />
+		<link href="%sveltekit.assets%/css/lato.css" rel="stylesheet" />
 		<link href="%sveltekit.assets%/css/variables.css" rel="stylesheet" />
+		<link rel="icon" href="%sveltekit.assets%/icons/favicon-light.png" type="image/png" />
 		<link
-			href="https://fonts.jinya.de/css2?family=Lato:ital,wght@0,100%3B0,300%3B0,400%3B0,700%3B0,900"
-			rel="stylesheet"
-			type="text/css"
+			rel="icon"
+			href="%sveltekit.assets%/icons/favicon-dark.png"
+			media="(prefers-color-scheme: dark)"
+			type="image/png"
 		/>
-		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
-		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
-		<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#19324c" />
+		<link rel="icon" href="%sveltekit.assets%/icons/favicon.svg" type="image/svg+xml" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="%sveltekit.assets%/icons/apple-touch-icon.png"
+		/>
+		<link rel="mask-icon" href="%sveltekit.assets%/icons/safari-pinned-tab.svg" color="#19324c" />
 		<meta name="apple-mobile-web-app-title" content="Jinya CMS" />
 		<meta name="application-name" content="Jinya CMS" />
 		<meta name="msapplication-TileColor" content="#19324c" />
 		<meta name="theme-color" content="#19324c" />
+		<meta property="og:image:width" content="1852" />
+		<meta property="og:image:height" content="970" />
+		<meta property="og:title" content="Jinya CMS" />
+		<meta property="og:description" content="The simplest way to manage your portfolio" />
+		<meta property="og:url" content="https://jinya.de" />
+		<meta property="og:image" content="https://jinya.de/img/og-image.jpg" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
