--- a/src/app.html
+++ b/src/app.html
@@ -6,18 +6,9 @@
 		<link href="%sveltekit.assets%/css/reset.css" rel="stylesheet" />
 		<link href="%sveltekit.assets%/css/variables.css" rel="stylesheet" />
 		<link rel="icon" href="%sveltekit.assets%/icons/favicon-light.png" type="image/png" />
-		<link
-			rel="icon"
-			href="%sveltekit.assets%/icons/favicon-dark.png"
-			media="(prefers-color-scheme: dark)"
-			type="image/png"
-		/>
+		<link rel="icon" href="%sveltekit.assets%/icons/favicon-dark.png" media="(prefers-color-scheme: dark)" type="image/png" />
 		<link rel="icon" href="%sveltekit.assets%/icons/favicon.svg" type="image/svg+xml" />
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="%sveltekit.assets%/icons/apple-touch-icon.png"
-		/>
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/icons/apple-touch-icon.png" />
 		<link rel="mask-icon" href="%sveltekit.assets%/icons/safari-pinned-tab.svg" color="#19324c" />
 		<meta name="apple-mobile-web-app-title" content="Jinya CMS" />
 		<meta name="application-name" content="Jinya CMS" />
