--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 		<meta content="width=device-width" name="viewport" />
 		<link href="%sveltekit.assets%/css/reset.css" rel="stylesheet" />
 		<link href="%sveltekit.assets%/css/variables.css" rel="stylesheet" />
+		<link href="%sveltekit.assets%/fonts/albert-sans.css" rel="stylesheet" />
+		<link href="%sveltekit.assets%/fonts/urbanist.css" rel="stylesheet" />
 		<link rel="icon" href="%sveltekit.assets%/icons/favicon-light.png" type="image/png" />
 		<link rel="icon" href="%sveltekit.assets%/icons/favicon-dark.png" media="(prefers-color-scheme: dark)" type="image/png" />
 		<link rel="icon" href="%sveltekit.assets%/icons/favicon.svg" type="image/svg+xml" />
